<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentFragment"
    android:orientation="vertical">


    <EditText
        android:id="@+id/usernameStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/completeNameStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="30dp"
        android:inputType="textPersonName"
        android:hint="@string/completename" />

    <EditText
        android:id="@+id/passwordStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/studentIdStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/studentId"
        android:inputType="numberDecimal" />


    <Button
        android:id="@+id/registerstudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/register" />


    <Button
        android:id="@+id/backBtnStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/back" />

</LinearLayout>