<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfessorPanelFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/professorPanelTxt1"
            android:layout_width="386dp"
            android:layout_height="33dp"
            android:background="#121368"
            android:backgroundTint="#680909"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/professor_panel"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#5C6BC0"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01" />

        <Button
            android:id="@+id/professor_create_class"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/prof_panel_create_class"
            app:layout_constraintBottom_toTopOf="@+id/professor_class_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/professorPanelTxt1"
            app:layout_constraintVertical_bias="0.824" />

        <Button
            android:id="@+id/professor_class_list"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/prof_my_classes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/professorPanelTxt1"
            app:layout_constraintVertical_bias="0.34" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>